<resources>
    <string name="app_name">exercise</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="community">Community</string>
    <string name="progress">Progress</string>
    <string name="coach">Coach</string>
    <string name="profile">Profile</string>
    <string name="all">ALL</string>
    <string name="outdoor">OUTDOOR</string>
    <string name="indoor">INDOOR</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="average_pace_label">Steps</string>
    <string name="elapsed_time_label">Elapsed time</string>
    <string name="distance_label">Distance</string>
    <string name="start_label">Start</string>
    <string name="stop_label">Stop</string>
    <string name="distance_value">%d meters</string>

</resources>