<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_community">
    <fragment
        android:id="@+id/navigation_community"
        android:name="com.example.exercise.ui.home.HomeFragment"
        android:label="@string/community"
        tools:layout="@layout/fragment_home"/>
    <fragment
        android:id="@+id/navigation_progress"
        android:name="com.example.exercise.ui.progress.ProgressFragment"
        android:label="@string/progress"
        tools:layout="@layout/fragment_progress"/>
    <fragment
        android:id="@+id/navigation_coach"
        android:name="com.example.exercise.ui.coach.CoachFragment"
        android:label="@string/coach"
        tools:layout="@layout/fragment_coach"/>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.exercise.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>